inventory-nodejs/.nodeshift/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: nodejs-health-check
spec:
  template:
    spec:
      containers:
        - readinessProbe:
            httpGet:
              path: /api/health/readiness
              port: 8080
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /api/health/liveness
              port: 8080
              scheme: HTTP
            failureThreshold: 2
            initialDelaySeconds: 60
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
